--- a/hwtemp/temp.tex
+++ b/hwtemp/temp.tex
@@ -4,16 +4,41 @@
 \usepackage[headheight=110pt]{geometry}
 \usepackage{lastpage}
 \usepackage{amsthm,amssymb,amsfonts,amsmath}
+\usepackage{algorithmic, algorithm}
+\usepackage{enumitem}
+
 \pagestyle{fancy}
 \fancyhf{}
 \setlength\parindent{0pt}
 
-\rhead{Your Name Here}
+% this adjusts for left and right closing quotes
+\usepackage [english]{babel}
+\usepackage [autostyle, english = american]{csquotes}
+\MakeOuterQuote{"}
+
+
+% these are for algorithms
+% Usage:
+% \REQURE is rendered as Input:
+% \ENSURE is rendered as Output:
+\renewcommand{\algorithmicrequire}{\textbf{Input:}}
+\renewcommand{\algorithmicensure}{\textbf{Output:}}
+\renewcommand{\algorithmiccomment}[1]{\bgroup\hfill//~#1\egroup}
+
+% variables for the template
+\newcommand{\yourName}{Your name here}
+\newcommand{\classNumber}{Class number}
+\newcommand{\instructor}{Instructor name}
+\newcommand{\className}{course}
+\newcommand{\semester}{semester}
+
+\rhead{\yourName}
+\chead{\classNumber}
 \lhead{Homework \# 1}
 \cfoot{Page \thepage \ of \pageref{LastPage}}
 
 \title{Homework \# 1}
-\author{Your Name Here}
+\author{\yourName}
 \date{January 15, 2016}
  
 \begin{document}
@@ -23,21 +48,18 @@
 \clearpage\maketitle
 \centering
 \vspace{2.5cm}
-Math 2280-001 \qquad Ordinary Differential Equations \qquad Spring 2016\\
+\classNumber \qquad \className \qquad \semester\\
 \vspace{0.5cm}
-Professor's Name Here
+\instructor
 \thispagestyle{empty}
 \end{titlepage}
 
-\section{Problem 1.1.26}
-
-\section{Problem 1.1.28}
-
-\section{Problem 1.2.8}
-
-\section{Problem 1.2.27}
-
-\section{Problem 1.3.8}
+\section{}
+\section{}
+\section{}
+\section{}
+\section{}
 \end{document}
+
 
 
